Fixed an image responsiveness on mobile

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -713,7 +713,7 @@ body {
             margin: 0 0 5rem;
             overflow-x: hidden;
             padding: 1rem 0 2rem;
-            min-height: 30vh;
+            min-height: 40vh;
 
             h2 {
                 text-align: center;
